fix spacing issue brought about by previous commit (f7270bdf9f6271154b53f315e94e0ddc01263c97)

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -1677,6 +1677,9 @@ span.log-icon.complete {
 .instance-wrapper div {
     display: inline-block;
 }
+.inline-block {
+    display: inline-block;
+}
 
 .instance-num {
     background-color: #3C4355;
